--- a/main.css
+++ b/main.css
@@ -1,14 +1,32 @@
 :root {
     --mainWhite: #f5f5f5f5;
     --mainDark: #333333;
-    --mainGreen: #317b22;
-    --mainRed: #b80c09;
+    --mainGreen: #2bc70c;
+    --mainRed: #e91814;
     --mainBlue: #05668d;
+  }
+  h1 {
+    text-align: center;
+    color: white;
+  }
+  .jumbotron {
+    background-color: #0e455b;
+  }
+  h5 {
+    font-weight: bold;
+
+  }
+  h5:hover {
+    color:red;
+    font-size: 20px;
   }
   
   body {
-    background: var(--mainWhite);
+    background-color: rgb(237, 236, 221);
     color: var(--mainDark);
+    margin: 8%;
+    border: 2px solid  #0e455b;
+   
   }
   .budget-feedback,
   .expense-feedback {
